# RPT-to-RDF

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  CONDITION_MAPPING_GUIDE.md  CONDITION_MAPPING_QUICK_REF.md  CONTRIBUTING.md  FONT_MAPPING_IMPLEMENTATION.md  FORMULA_EXPANSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PREVIEW_FEATURE.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  TODO.md  TYPE_HINTS_README.md  TYPE_HINTS_SUMMARY.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  rpt-to-rdf.bat  rpt-to-rdf.sh  run_tests.sh  setup.bat  setup.py  setup.sh  test_data_generation.py  test_manual_verification.py  test_new_formulas.py  verify_tests.py
.github/workflows/: ci.yml
config/: connection_templates.yaml  font_mappings.yaml  formula_mappings.yaml  settings.yaml  type_mappings.yaml
docker/: README.md  convert-to-rdf.sh  docker-compose.yml
docker/rpttoxml/: Dockerfile  README.md  build.sh  extract-rpt.sh
docs/: FONT_MAPPING.md  FORMULA_REFERENCE.md  MYPY_USAGE.md  TYPE_HINTS_GUIDE.md
examples/: condition_mapping_example.py  font_mapping_demo.py
scripts/: check_types.sh
src/: __init__.py  config.py  main.py  pipeline.py  py.typed
src/extraction/: __init__.py  rpt_extractor.py
src/generation/: __init__.py  html_preview.py  oracle_xml_generator.py  rdf_converter.py
src/parsing/: __init__.py  crystal_parser.py  report_model.py
src/transformation/: __init__.py  condition_mapper.py  connection_mapper.py  font_mapper.py  formula_translator.py  layout_mapper.py  parameter_mapper.py  transformer.py  type_mapper.py
src/utils/: __init__.py  error_handler.py  file_utils.py  logger.py  mdb_extractor.py  output_comparator.py  schema_extractor.py  validator.py
tests/: README.md  __init__.py  conftest.py  test_condition_mapper.py  test_font_mapper.py  test_font_mapper_integration.py  test_formula_translator.py  test_integration.py  test_layout_mapper.py  test_output_comparator.py  test_type_mapper.py
tools/: setup_rpttoxml.ps1  setup_rpttoxml.sh
tools/RptToXmlJava/: .gitignore  CRConfig.xml  README.md  build.sh  dependency-reduced-pom.xml  pom.xml  rpttoxml.sh
tools/RptToXmlJava/src/main/java/com/rpttoxml/: RptToXml.java
